# edu-garage

./: README.md
haskell/: Garage.hs  default.nix  garage.cabal
idris/: Garage.idr
idris2/: Garage.idr  default.nix
